--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": ["next/core-web-vitals"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", {
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
-    }],
-    "react-hooks/exhaustive-deps": "warn"
-  }
+  "extends": "next/core-web-vitals"
 }
