--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next node_modules && npm install"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -14,7 +15,7 @@
     "@types/prismjs": "^1.26.5",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
-    "markdown-it-mermaid": "^0.2.5",
+    "markdown-it-mermaid": "^0.2.0",
     "markdown-it-prism": "^2.3.0",
     "next": "15.0.3",
     "prismjs": "^1.29.0",
