Configuración exhaustiva de ESLint y dependencias de TypeScript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended"
@@ -7,7 +8,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
-      "warn",
+      "warn", 
       {
         "argsIgnorePattern": "^_",
         "varsIgnorePattern": "^_",
@@ -15,5 +16,10 @@
       }
     ],
     "no-unused-vars": "off"
+  },
+  "settings": {
+    "next": {
+      "rootDir": ["./"]
+    }
   }
 }
