--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,18 +8,11 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
-      "warn", 
+      "warn",
       {
         "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
+        "varsIgnorePattern": "^_"
       }
-    ],
-    "no-unused-vars": "off"
-  },
-  "settings": {
-    "next": {
-      "rootDir": ["./"]
-    }
+    ]
   }
 }
