--- a/package.json
+++ b/package.json
@@ -10,35 +10,36 @@
     "clean": "rm -rf .next node_modules && npm install"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/markdown-it": "^14.1.2",
-    "@types/prismjs": "^1.26.5",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/markdown-it": "^13.0.7",
+    "@types/prismjs": "^1.26.3",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^14.1.0",
+    "markdown-it": "^14.0.0",
     "markdown-it-mermaid": "^0.2.0",
     "markdown-it-prism": "^2.3.0",
-    "next": "15.0.3",
+    "next": "14.1.0",
     "prismjs": "^1.29.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "reading-time": "^1.5.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
-    "unified": "^11.0.5"
+    "sharp": "^0.33.2",
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "^15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
