--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next node_modules && npm install"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.3",
     "@prisma/client": "^6.4.1",
     "@stackframe/stack": "^2.7.21",
     "@tailwindcss/typography": "^0.5.10",
