--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "markdown-it-mermaid": "^0.2.0",
     "markdown-it-prism": "^2.3.0",
     "next": "14.1.0",
+    "next-mdx-remote": "^5.0.0",
     "prisma": "^6.4.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
