--- a/package.json
+++ b/package.json
@@ -14,25 +14,16 @@
     "@prisma/client": "^6.4.1",
     "@stackframe/stack": "^2.7.21",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/markdown-it": "^13.0.7",
     "@types/prismjs": "^1.26.3",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^14.0.0",
-    "markdown-it-mermaid": "^0.2.0",
-    "markdown-it-prism": "^2.3.0",
     "next": "14.1.0",
-    "next-mdx-remote": "^5.0.0",
     "prisma": "^6.4.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "reading-time": "^1.5.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "remark-parse": "^11.0.0",
-    "sharp": "^0.33.2",
-    "unified": "^11.0.4"
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -44,7 +35,6 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
