--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/prismjs": "^1.26.3",
     "gray-matter": "^4.0.3",
+    "markdown-it": "^14.0.0",
     "next": "14.1.0",
     "prisma": "^6.4.1",
     "prismjs": "^1.29.0",
@@ -26,6 +27,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
