--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.0.0",
     "next": "14.1.0",
+    "next-mdx-remote": "^5.0.0",
     "prisma": "^6.4.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
