--- a/package.json
+++ b/package.json
@@ -10,30 +10,40 @@
     "clean": "rm -rf .next node_modules && npm install"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/prismjs": "^1.26.3",
+    "bcryptjs": "^3.0.3",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.0.0",
-    "next": "^14.2.32",
+    "next": "^16.1.1",
+    "next-auth": "^5.0.0-beta.30",
     "next-mdx-remote": "^5.0.0",
+    "prisma": "^5.10.2",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.4.0",
     "reading-time": "^1.5.0",
-    "sharp": "^0.33.2"
+    "resend": "^6.6.0",
+    "sharp": "^0.33.2",
+    "ws": "^8.19.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.9.3"
   }
 }
