--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@prisma/client": "^5.10.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/prismjs": "^1.26.3",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.0.0",
     "next": "^16.1.1",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -40,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "autoprefixer": "^10.4.17",
+    "canvas-confetti": "^1.9.4",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
