--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.4.0",
     "reading-time": "^1.5.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "resend": "^6.6.0",
     "sharp": "^0.33.2",
     "ws": "^8.19.0",
